[package]
name = "dogecoinrpc"
version = "0.2.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>", "Aiden McClelland <gagglehoof@gmail.com>"]
repository = "https://github.com/DRBoneZ/rust-dogecoin-rpc"
homepage = "https://github.com/DRBoneZ/rust-dogecoin-rpc"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Dogecoin Rpc API client for rust."

[dependencies]
jsonrpc-client-core = { git = "https://github.com/DR-BoneZ/jsonrpc-client-rs.git", features = ["disable_version_check"] }
jsonrpc-client-http = { git = "https://github.com/DR-BoneZ/jsonrpc-client-rs.git" }
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = { version = "1.0.24", features = ["arbitrary_precision"] }
hyper = "0.11.27"
